--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ h1 {
   margin: 0;
   font-family: 'Lobster';
   font-weight: normal;
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
 }
 
@@ -74,7 +74,9 @@ nav {
   margin-right: 10px;
 }
 
-
+.active{
+  margin: 20px;
+}
 
 .add-btn:hover {
   background: #4283aa;
@@ -111,7 +113,7 @@ nav {
   width: 50vw;
 }
 
-ul{
+.ul-for-campus{
   width: 100vw;
   text-align: center;  
 }
@@ -135,6 +137,10 @@ ul{
   margin-top:20px;
 }
 
+.campus-changename-form{
+  width: 40vw;
+  text-align: center;
+}
 input{
   margin-left: 5px;
   margin-right: 20px;
@@ -143,10 +149,28 @@ input{
 .new-campus-container{
   text-align: center;
   margin-top: 50px;
+  margin-bottom: 100px;
 }
 
 .new-std-container{
   text-align: center;
   margin-top: 50px;
   margin-bottom: 100px;
+}
+
+.campus-student-container{
+  margin-left: 25vw;
+  text-align: center;
+}
+
+.single-std-container{
+  margin-top: 10vh;
+  margin-left: 40vw;
+  text-align: center;
+}
+
+.single-std-p{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
 }
